fixed mobile nav added z-index

--- a/css/index.css
+++ b/css/index.css
@@ -481,6 +481,7 @@ footer {
     height: auto;
     padding: 0;
     margin: 0;
+    z-index: 99;
   }
   nav#mobile-nav ul {
     flex-direction: row;
