--- a/sass/_mobile.sass
+++ b/sass/_mobile.sass
@@ -11,6 +11,7 @@
         height: auto
         padding: 0
         margin: 0
+        z-index: 99
         ul
             flex-direction: row
             padding: 1rem 0
